# solana-vault-standard

./: Anchor.toml  CLAUDE.md  Cargo.toml  README.md  package.json  tsconfig.json
.claude/skills/: SKILL.md
docs/: ARCHITECTURE.md  PRIVACY.md  SDK.md  SECURITY.md  TESTING.md
programs/svs-1/: Cargo.toml
programs/svs-1/src/: error.rs  events.rs  lib.rs  math.rs  state.rs
programs/svs-1/src/instructions/: admin.rs  deposit.rs  initialize.rs  mint.rs  mod.rs  redeem.rs  view.rs  withdraw.rs
programs/svs-2/: Cargo.toml
programs/svs-2/src/: constants.rs  error.rs  lib.rs  state.rs
programs/svs-2/src/instructions/: admin.rs  apply_pending.rs  configure_account.rs  deposit.rs  initialize.rs  mint.rs  mod.rs  redeem.rs  view.rs  withdraw.rs
proof-backend/: Cargo.toml  Dockerfile  README.md  docker-compose.yml
proof-backend/src/: error.rs  main.rs  types.rs
proof-backend/src/routes/: health.rs  mod.rs  proofs.rs
proof-backend/src/services/: mod.rs  proof_generator.rs
scripts/: README.md
scripts/svs-1/: README.md  basic.ts  edge-cases.ts  helpers.ts  inflation-attack.ts  multi-user.ts  slippage.ts  sync.ts
sdk/: package.json  tsconfig.json
sdk/core/: .mocharc.json  package.json
sdk/core/src/: index.ts  vault.ts
sdk/core/tests/: errors.test.ts  pda.test.ts  vault.test.ts
sdk/privacy/: package.json
sdk/privacy/src/: confidential-instructions.ts  confidential-vault.ts  encryption.ts  index.ts  privacy-cash.ts  private-vault.ts  proofs.ts  types.ts  wasm-bridge.ts
sdk/src/: math.ts  pda.ts  vault.ts
sdk/tests/: events.test.ts  math.test.ts
tests/: admin-extended.ts  decimals.ts  edge-cases.ts  full-lifecycle.ts  invariants.ts  multi-user.ts  svs-1.ts  svs-2.ts  yield-sync.ts
trident-tests/: Cargo.toml  Trident.toml
trident-tests/fuzz_0/: fuzz_accounts.rs  test_fuzz.rs  types.rs
