[package]
name = "svs-proof-backend"
version = "0.1.0"
edition = "2021"
description = "ZK proof generation backend for SVS-2 Confidential Vaults"
license = "Apache-2.0"

# Exclude from parent workspace
[workspace]

[dependencies]
# Web framework
axum = "0.8"
tokio = { version = "1.40", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "limit"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Solana ZK SDK (proof generation)
solana-zk-sdk = "2.1"
solana-sdk = "2.1"

# Base encoding
bs58 = "0.5"
base64 = "0.22"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Pod types
bytemuck = "1.22"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async utilities
futures = "0.3"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
